# cpp-lesson-01-guess-number

./: .gitignore  README.md
.github/workflows/: build.yml
docs/: TASK.md
students/Maxim/: main.cpp
students/dima/: CMakeLists.txt  main.cpp  main2.cpp
students/test-student/: guess_number.cpp
